# Spotify_Playlist

./: .cache  .env  README.md  main.py  pyproject.toml
images/: .gitignore
templates/: playlist.html
