[tool.poetry]
name = "spotify-new"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "spotify_new"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.3"
flask-bootstrap = "^3.3.7.1"
spotipy = "^2.23.0"
python-dotenv = "^1.0.0"
beautifulsoup4 = "^4.12.2"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
